[gd_scene load_steps=24 format=3 uid="uid://colewe448o40b"]

[ext_resource type="Script" path="res://src/Scenes/Node2D_Scene.gd" id="1_7m56y"]
[ext_resource type="Script" path="res://src/Scripts/World Object Scripts/GroundConstructor.gd" id="2_w5h10"]
[ext_resource type="Texture2D" uid="uid://sxw1l2jhnh2i" path="res://Assets/bushes.png" id="3_irgeh"]
[ext_resource type="PackedScene" uid="uid://ca5grx0fi4o55" path="res://src/TileMaps/tile_map_ground.tscn" id="4_043dl"]
[ext_resource type="Script" path="res://src/Scripts/Entity Scripts/Player.gd" id="5_ct6bp"]
[ext_resource type="PackedScene" uid="uid://d0wtml2jxaw87" path="res://src/Components/jump_component.tscn" id="6_gtpll"]
[ext_resource type="Script" path="res://src/Resources/JumpParametersResource.gd" id="7_06b77"]
[ext_resource type="PackedScene" uid="uid://2a3urxgsttji" path="res://src/Scenes/GUI Scenes/scene_transition.tscn" id="8_esjjy"]
[ext_resource type="Script" path="res://src/Resources/SceneTransitionResource.gd" id="9_g162n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mqolk"]
size = Vector2(63.2096, 5.60898)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3gs0u"]
size = Vector2(2.48762, 8.86891)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_whdbt"]
size = Vector2(4.76048, 2.73445)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cjv8k"]
size = Vector2(6.41357, 2.73445)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lsso1"]
size = Vector2(9.66271, 2.73445)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w051w"]
size = Vector2(8.09012, 2.73445)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6sndk"]
size = Vector2(11.8951, 2.73445)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vhqhe"]
size = Vector2(8.06519, 2.73445)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_01dsb"]
size = Vector2(17.6826, 2.73445)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2mgpo"]
size = Vector2(2.14131, 24.4586)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_frxfb"]
size = Vector2(2.14131, 24.4586)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h205j"]
size = Vector2(48, 96)

[sub_resource type="Resource" id="Resource_ls12s"]
script = ExtResource("7_06b77")
jump_height = 20.0
time_to_peak = 0.5
time_to_descent = 0.4

[sub_resource type="Resource" id="Resource_3otu6"]
script = ExtResource("9_g162n")
change_scene = false
target_scene_name = ""
play_animation = true
transition_animation_name = "dissolve"
transition_speed = 0.0

[node name="Node2D_Scene" type="Node2D"]
script = ExtResource("1_7m56y")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -3024.0
offset_top = -2020.0
offset_right = 5366.0
offset_bottom = 907.0
color = Color(0.584314, 0.709804, 1, 1)

[node name="GroundConstructor" type="Node2D" parent="." groups=["ground_tile"]]
script = ExtResource("2_w5h10")

[node name="BushesGroup" type="Node2D" parent="."]

[node name="BushesLarge" type="Sprite2D" parent="BushesGroup"]
position = Vector2(411, 342)
scale = Vector2(3, 3)
texture = ExtResource("3_irgeh")
vframes = 2

[node name="BushesLarge2" type="Sprite2D" parent="BushesGroup"]
position = Vector2(1019, 245)
scale = Vector2(3, 3)
texture = ExtResource("3_irgeh")
vframes = 2

[node name="BushesLarge3" type="Sprite2D" parent="BushesGroup"]
position = Vector2(1832, 294)
scale = Vector2(3, 3)
texture = ExtResource("3_irgeh")
vframes = 2

[node name="BushesLarge4" type="Sprite2D" parent="BushesGroup"]
position = Vector2(3031, 248)
scale = Vector2(3, 3)
texture = ExtResource("3_irgeh")
vframes = 2

[node name="BushesSmall" type="Sprite2D" parent="BushesGroup"]
position = Vector2(143, 369)
scale = Vector2(3, 3)
texture = ExtResource("3_irgeh")
vframes = 4
frame = 2

[node name="BushesSmall2" type="Sprite2D" parent="BushesGroup"]
position = Vector2(1519, 369)
scale = Vector2(3, 3)
texture = ExtResource("3_irgeh")
vframes = 4
frame = 2

[node name="BushesSmall3" type="Sprite2D" parent="BushesGroup"]
position = Vector2(2412, 180)
scale = Vector2(3, 3)
texture = ExtResource("3_irgeh")
vframes = 4
frame = 2

[node name="BushesSmall4" type="Sprite2D" parent="BushesGroup"]
position = Vector2(3524, 268)
scale = Vector2(3, 3)
texture = ExtResource("3_irgeh")
vframes = 4
frame = 2

[node name="TileMapGround" parent="." instance=ExtResource("4_043dl")]
position = Vector2(66.941, 65.9223)
scale = Vector2(3, 3)
layer_0/tile_data = PackedInt32Array(917502, 786432, 2, 851966, 786432, 1, 786430, 0, 1, 720894, 0, 1, 655358, 786432, 1, 589822, 0, 1, 589823, 65536, 1, 917503, 851968, 2, 851967, 851968, 1, 786431, 851968, 1, 720895, 851968, 1, 655359, 851968, 1, 524288, 851968, 1, 589824, 851968, 1, 655360, 65536, 1, 720896, 65536, 1, 786432, 851968, 1, 851968, 851968, 2, 851969, 65536, 2, 786433, 65536, 1, 720897, 65536, 1, 655361, 65536, 1, 589825, 851968, 1, 524289, 851968, 1, 458752, 65536, 0, 524287, 65536, 0, 524286, 0, 0, 458753, 65536, 0, 458754, 65536, 0, 458755, 65536, 0, 458756, 65536, 0, 458757, 65536, 0, 458758, 65536, 0, 458759, 65536, 0, 458760, 65536, 0, 458761, 65536, 0, 458762, 65536, 0, 458763, 65536, 0, 458764, 65536, 0, 458765, 65536, 0, 458766, 65536, 0, 458767, 851968, 1, 458768, 65536, 1, 458769, 65536, 1, 458770, 65536, 1, 458771, 65536, 1, 458772, 65536, 1, 458773, 65536, 1, 458774, 65536, 1, 458775, 851968, 1, 458776, 851968, 1, 589848, 65536, 1, 655384, 65536, 1, 720920, 851968, 1, 786456, 65536, 1, 524312, 851968, 1, 786455, 851968, 1, 851991, 851968, 2, 851992, 65536, 2, 720919, 65536, 1, 655383, 851968, 1, 589847, 65536, 1, 524311, 851968, 1, 524310, 851968, 1, 589846, 851968, 1, 655382, 65536, 1, 720918, 851968, 1, 786454, 851968, 1, 851990, 65536, 2, 851989, 786432, 2, 851988, 196608, 2, 851987, 196608, 2, 851986, 196608, 2, 851985, 196608, 2, 851984, 196608, 2, 851983, 196608, 2, 851982, 196608, 2, 851981, 196608, 2, 851980, 196608, 2, 851979, 196608, 2, 851978, 196608, 2, 851977, 196608, 2, 851976, 196608, 2, 851975, 196608, 2, 851974, 917504, 2, 851973, 786432, 2, 851972, 196608, 2, 851971, 196608, 2, 851970, 917504, 2, 786434, 851968, 1, 786435, 851968, 1, 786436, 851968, 1, 786438, 851968, 1, 786437, 65536, 1, 786439, 851968, 1, 786440, 65536, 1, 786441, 851968, 1, 786442, 851968, 1, 786443, 65536, 1, 786444, 851968, 1, 786445, 65536, 1, 786446, 65536, 1, 786447, 65536, 1, 786448, 65536, 1, 786449, 65536, 1, 786450, 851968, 1, 786451, 851968, 1, 786452, 851968, 1, 786453, 65536, 1, 720917, 851968, 1, 720916, 851968, 1, 720915, 851968, 1, 720914, 65536, 1, 720913, 851968, 1, 720912, 851968, 1, 720911, 65536, 1, 720910, 851968, 1, 720909, 851968, 1, 720908, 851968, 1, 720907, 851968, 1, 720901, 851968, 1, 720900, 65536, 1, 720899, 65536, 1, 720898, 851968, 1, 720902, 851968, 1, 720904, 851968, 1, 720903, 851968, 1, 720905, 65536, 1, 720906, 65536, 1, 655376, 851968, 1, 655377, 851968, 1, 655378, 851968, 1, 655379, 851968, 1, 655380, 851968, 1, 655381, 65536, 1, 655375, 65536, 1, 655374, 851968, 1, 655373, 851968, 1, 655372, 65536, 1, 655366, 851968, 1, 655365, 851968, 1, 655364, 851968, 1, 655363, 65536, 1, 655362, 851968, 1, 655367, 851968, 1, 655368, 65536, 1, 655369, 65536, 1, 655370, 65536, 1, 655371, 65536, 1, 589844, 851968, 1, 589845, 851968, 1, 589843, 65536, 1, 589842, 851968, 1, 589841, 65536, 1, 589840, 851968, 1, 589839, 65536, 1, 589838, 851968, 1, 589837, 851968, 1, 589836, 851968, 1, 589835, 65536, 1, 589834, 851968, 1, 589833, 65536, 1, 589832, 851968, 1, 589831, 851968, 1, 589830, 65536, 1, 589829, 851968, 1, 589828, 851968, 1, 589827, 851968, 1, 589826, 65536, 1, 524290, 851968, 1, 524291, 851968, 1, 524292, 851968, 1, 524293, 851968, 1, 524294, 65536, 1, 524295, 65536, 1, 524296, 65536, 1, 524297, 65536, 1, 524298, 851968, 1, 524299, 65536, 1, 524300, 65536, 1, 524301, 851968, 1, 524302, 851968, 1, 524303, 851968, 1, 524304, 65536, 1, 524305, 851968, 1, 524306, 65536, 1, 524307, 851968, 1, 524308, 65536, 1, 524309, 851968, 1, 393236, 851968, 1, 327699, 851968, 1, 262163, 851968, 1, 262164, 65536, 1, 327700, 65536, 1, 393235, 65536, 1, 393234, 851968, 1, 327698, 65536, 1, 262162, 65536, 1, 196626, 0, 0, 196627, 65536, 0, 196628, 131072, 0, 393233, 851968, 1, 327697, 851968, 1, 262161, 0, 0, 393232, 851968, 1, 327696, 0, 0, 393231, 0, 0, 393237, 65536, 1, 327701, 65536, 1, 393238, 851968, 1, 327702, 65536, 1, 393239, 65536, 1, 327703, 131072, 0, 393240, 851968, 0, 262165, 65536, 0, 262166, 131072, 0, 458779, 0, 0, 458780, 65536, 0, 458781, 65536, 0, 458782, 65536, 0, 458783, 65536, 0, 458784, 65536, 0, 458785, 851968, 1, 458786, 65536, 1, 458787, 851968, 1, 458788, 851968, 1, 458789, 65536, 1, 524325, 65536, 1, 589861, 65536, 1, 655397, 65536, 1, 720932, 65536, 1, 786468, 65536, 1, 786467, 851968, 1, 786466, 65536, 1, 852000, 851968, 2, 786465, 851968, 1, 851999, 851968, 2, 851998, 851968, 2, 851997, 851968, 2, 786461, 65536, 1, 720924, 851968, 1, 655388, 65536, 1, 589852, 65536, 1, 524316, 851968, 1, 524317, 65536, 1, 524323, 851968, 1, 524324, 851968, 1, 589860, 65536, 1, 655396, 851968, 1, 655395, 65536, 1, 655394, 65536, 1, 655393, 851968, 1, 655392, 65536, 1, 720927, 851968, 1, 655390, 851968, 1, 589854, 65536, 1, 524318, 65536, 1, 524319, 65536, 1, 524321, 851968, 1, 589857, 851968, 1, 720928, 851968, 1, 786463, 851968, 1, 786462, 65536, 1, 720925, 65536, 1, 655389, 851968, 1, 589853, 851968, 1, 524320, 65536, 1, 589858, 65536, 1, 720930, 851968, 1, 720929, 65536, 1, 786464, 851968, 1, 589856, 851968, 1, 393250, 65536, 0, 393251, 65536, 0, 720931, 65536, 1, 524322, 65536, 1, 589859, 65536, 1, 393249, 0, 0, 393252, 65536, 0, 393253, 65536, 0, 458790, 65536, 1, 393254, 65536, 0, 458778, 131072, 1, 458777, 65536, 1, 393241, 65536, 0, 393242, 131072, 0, 524313, 851968, 1, 524314, 851968, 1, 524315, 65536, 1, 589851, 851968, 1, 655387, 65536, 1, 655386, 65536, 1, 655385, 65536, 1, 589849, 851968, 1, 589850, 851968, 1, 720921, 851968, 1, 786457, 65536, 1, 851993, 65536, 2, 851994, 851968, 2, 851995, 851968, 2, 851996, 851968, 2, 786460, 65536, 1, 786459, 851968, 1, 720923, 851968, 1, 720922, 851968, 1, 786458, 65536, 1, 720926, 65536, 1, 589855, 851968, 1, 655391, 65536, 1, 852001, 65536, 2, 852002, 65536, 2, 852003, 65536, 2, 852004, 851968, 2, 852005, 65536, 2, 786469, 851968, 1, 720933, 851968, 1, 720934, 65536, 1, 786470, 851968, 1, 852006, 65536, 2, 655398, 65536, 1, 589862, 851968, 1, 524326, 851968, 1, 655399, 65536, 1, 720935, 65536, 1, 786471, 851968, 1, 589863, 851968, 1, 524327, 65536, 1, 458791, 65536, 1, 393255, 65536, 0, 852007, 851968, 2, 852008, 851968, 2, 786472, 65536, 1, 720936, 851968, 1, 655400, 851968, 1, 589864, 65536, 1, 524328, 65536, 1, 458792, 65536, 1, 393256, 65536, 1, 852009, 851968, 2, 786473, 851968, 1, 720937, 65536, 1, 655401, 65536, 1, 589865, 65536, 1, 524329, 65536, 1, 458793, 65536, 1, 393257, 65536, 1, 327721, 65536, 1, 327720, 786432, 1, 262184, 0, 0, 262185, 65536, 0, 262186, 65536, 0, 327722, 851968, 1, 393258, 851968, 1, 458794, 65536, 1, 524330, 851968, 1, 589866, 65536, 1, 655402, 851968, 1, 720938, 851968, 1, 786474, 851968, 1, 852010, 65536, 2, 852011, 851968, 2, 786475, 65536, 1, 720939, 851968, 1, 655403, 65536, 1, 589867, 65536, 1, 524331, 65536, 1, 458795, 65536, 1, 393259, 65536, 1, 327723, 65536, 1, 262187, 851968, 1, 262188, 65536, 1, 262189, 65536, 1, 327725, 65536, 1, 393261, 851968, 1, 458797, 851968, 1, 524333, 851968, 1, 524332, 65536, 1, 589868, 851968, 1, 655404, 851968, 1, 720940, 65536, 1, 786476, 65536, 1, 786477, 851968, 1, 786478, 851968, 1, 852014, 65536, 2, 852013, 65536, 2, 852012, 65536, 2, 655405, 65536, 1, 589869, 851968, 1, 720941, 851968, 1, 458796, 65536, 1, 393260, 65536, 1, 327724, 851968, 1, 262190, 851968, 1, 327726, 65536, 1, 393262, 851968, 1, 458798, 65536, 1, 524334, 851968, 1, 589870, 65536, 1, 655406, 851968, 1, 720942, 65536, 1, 852015, 851968, 2, 786479, 65536, 1, 720943, 851968, 1, 655407, 65536, 1, 589871, 851968, 1, 524335, 851968, 1, 458799, 851968, 1, 393263, 65536, 1, 327727, 65536, 1, 262191, 851968, 1, 262192, 65536, 1, 327728, 65536, 1, 393264, 65536, 1, 458800, 65536, 1, 524336, 851968, 1, 589872, 851968, 1, 655408, 851968, 1, 720944, 65536, 1, 786480, 65536, 1, 852016, 851968, 2, 852017, 851968, 2, 786481, 65536, 1, 720945, 65536, 1, 655409, 65536, 1, 589873, 851968, 1, 524337, 65536, 1, 458801, 851968, 1, 393265, 851968, 1, 327729, 65536, 1, 262193, 851968, 1, 262194, 851968, 1, 327731, 65536, 1, 393267, 851968, 1, 458803, 851968, 1, 524339, 65536, 1, 589875, 65536, 1, 655411, 65536, 1, 720947, 65536, 1, 720946, 65536, 1, 786482, 851968, 1, 852018, 851968, 2, 786483, 851968, 1, 852019, 851968, 2, 655410, 851968, 1, 589874, 851968, 1, 524338, 65536, 1, 458802, 851968, 1, 393266, 851968, 1, 327730, 65536, 1, 262195, 65536, 1, 262196, 851968, 1, 327732, 65536, 1, 327733, 851968, 1, 393269, 851968, 1, 458805, 851968, 1, 524341, 851968, 1, 589877, 851968, 1, 655413, 65536, 1, 720949, 851968, 1, 720948, 851968, 1, 786484, 851968, 1, 852020, 851968, 2, 852021, 65536, 2, 786485, 851968, 1, 655412, 65536, 1, 589876, 65536, 1, 524340, 65536, 1, 458804, 851968, 1, 393268, 65536, 1, 262197, 65536, 0, 262198, 131072, 0, 327735, 65536, 0, 393271, 65536, 1, 458807, 851968, 1, 524343, 851968, 1, 524342, 851968, 1, 589878, 851968, 1, 655414, 65536, 1, 720950, 65536, 1, 786486, 851968, 1, 786487, 65536, 1, 852023, 851968, 2, 852024, 851968, 2, 852025, 65536, 2, 786489, 851968, 1, 786488, 851968, 1, 196651, 0, 0, 196652, 65536, 0, 196653, 65536, 0, 196654, 65536, 0, 196655, 65536, 0, 196656, 65536, 0, 196657, 65536, 0, 196658, 65536, 0, 196659, 65536, 0, 196660, 131072, 0, 327734, 65536, 1, 393270, 851968, 1, 458806, 851968, 1, 852022, 851968, 2, 720951, 65536, 1, 655415, 65536, 1, 589879, 65536, 1, 589880, 851968, 1, 655416, 851968, 1, 720952, 851968, 1, 655417, 65536, 1, 589881, 65536, 1, 524345, 65536, 1, 524344, 851968, 1, 458808, 851968, 1, 393272, 851968, 1, 393273, 851968, 1, 458809, 851968, 1, 720953, 851968, 1, 786490, 65536, 1, 852026, 851968, 2, 720954, 65536, 1, 655418, 851968, 1, 589882, 851968, 1, 524346, 851968, 1, 458810, 65536, 1, 393274, 65536, 1, 393275, 851968, 1, 393276, 65536, 1, 393277, 65536, 1, 393278, 851968, 1, 393279, 65536, 1, 393280, 851968, 1, 393281, 851968, 1, 393282, 65536, 1, 393283, 851968, 1, 393284, 851968, 1, 393285, 851968, 1, 393286, 65536, 1, 393287, 65536, 1, 393288, 851968, 1, 393289, 851968, 1, 393290, 851968, 1, 393291, 131072, 1, 393292, 196608, 1, 458828, 131072, 1, 524364, 917504, 1, 589900, 917504, 1, 655436, 917504, 1, 720972, 917504, 1, 786508, 131072, 1, 852044, 131072, 2, 852043, 786432, 2, 852042, 196608, 2, 852041, 196608, 2, 852040, 196608, 2, 852039, 196608, 2, 852038, 196608, 2, 852037, 196608, 2, 852036, 196608, 2, 852035, 196608, 2, 852034, 196608, 2, 852033, 196608, 2, 852032, 196608, 2, 852031, 196608, 2, 852030, 917504, 2, 852029, 65536, 2, 786493, 65536, 1, 786492, 851968, 1, 786491, 851968, 1, 852027, 65536, 2, 852028, 851968, 2, 786494, 65536, 1, 786495, 851968, 1, 786496, 65536, 1, 786497, 851968, 1, 786498, 851968, 1, 786499, 65536, 1, 786500, 65536, 1, 786501, 65536, 1, 786502, 851968, 1, 786503, 65536, 1, 786504, 851968, 1, 786505, 851968, 1, 786506, 65536, 1, 786507, 851968, 1, 720971, 65536, 1, 720970, 851968, 1, 720969, 851968, 1, 720968, 851968, 1, 720967, 851968, 1, 720966, 851968, 1, 720965, 65536, 1, 720964, 851968, 1, 720963, 65536, 1, 720962, 65536, 1, 720961, 65536, 1, 720960, 65536, 1, 720959, 851968, 1, 720958, 65536, 1, 720957, 65536, 1, 720956, 851968, 1, 655420, 851968, 1, 655419, 851968, 1, 720955, 851968, 1, 655421, 851968, 1, 655422, 851968, 1, 655423, 851968, 1, 655424, 851968, 1, 655425, 851968, 1, 655426, 851968, 1, 655427, 65536, 1, 655428, 65536, 1, 655429, 851968, 1, 655430, 851968, 1, 655431, 65536, 1, 655432, 851968, 1, 655433, 65536, 1, 655434, 65536, 1, 655435, 65536, 1, 589899, 851968, 1, 589898, 851968, 1, 589897, 851968, 1, 589896, 65536, 1, 589895, 65536, 1, 589894, 65536, 1, 589893, 65536, 1, 589892, 851968, 1, 589891, 65536, 1, 589890, 851968, 1, 589889, 65536, 1, 589888, 65536, 1, 589887, 851968, 1, 589886, 851968, 1, 589885, 851968, 1, 589884, 65536, 1, 589883, 851968, 1, 524347, 851968, 1, 524348, 851968, 1, 524349, 65536, 1, 524350, 65536, 1, 524351, 851968, 1, 524352, 65536, 1, 524353, 851968, 1, 524354, 65536, 1, 524355, 65536, 1, 524356, 65536, 1, 524357, 65536, 1, 524358, 851968, 1, 524359, 65536, 1, 524360, 851968, 1, 524361, 851968, 1, 524362, 851968, 1, 524363, 65536, 1, 458827, 851968, 1, 458826, 851968, 1, 458825, 65536, 1, 458824, 851968, 1, 458823, 851968, 1, 458822, 65536, 1, 458821, 65536, 1, 458820, 65536, 1, 458819, 65536, 1, 458818, 65536, 1, 458817, 851968, 1, 458816, 851968, 1, 458815, 65536, 1, 458814, 65536, 1, 458813, 65536, 1, 458812, 65536, 1, 458811, 851968, 1, 327738, 65536, 0, 327739, 65536, 0, 327740, 65536, 0, 327741, 65536, 0, 327742, 65536, 0, 327743, 65536, 0, 327744, 65536, 0, 327745, 65536, 0, 327746, 65536, 0, 327747, 65536, 0, 327748, 65536, 0, 327749, 65536, 0, 327750, 65536, 0, 327751, 65536, 0, 327752, 65536, 0, 327753, 65536, 0, 327754, 65536, 0, 327755, 131072, 0, 327756, 131072, 0, 327737, 65536, 0, 327736, 65536, 0)

[node name="GroundStaticBody2D" type="StaticBody2D" parent="TileMapGround"]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMapGround/GroundStaticBody2D"]
position = Vector2(599.924, 168)
scale = Vector2(20, 20)
shape = SubResource("RectangleShape2D_mqolk")
metadata/_edit_lock_ = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="TileMapGround/GroundStaticBody2D"]
position = Vector2(312, 134)
scale = Vector2(20, 20)
shape = SubResource("RectangleShape2D_3gs0u")
metadata/_edit_lock_ = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="TileMapGround/GroundStaticBody2D"]
position = Vector2(320, 92)
scale = Vector2(20, 20)
shape = SubResource("RectangleShape2D_whdbt")
metadata/_edit_lock_ = true

[node name="CollisionShape2D4" type="CollisionShape2D" parent="TileMapGround/GroundStaticBody2D"]
position = Vector2(320, 108)
scale = Vector2(20, 20)
shape = SubResource("RectangleShape2D_cjv8k")
metadata/_edit_lock_ = true

[node name="CollisionShape2D5" type="CollisionShape2D" parent="TileMapGround/GroundStaticBody2D"]
position = Vector2(335.726, 122)
scale = Vector2(20, 20)
shape = SubResource("RectangleShape2D_lsso1")
metadata/_edit_lock_ = true

[node name="CollisionShape2D6" type="CollisionShape2D" parent="TileMapGround/GroundStaticBody2D"]
position = Vector2(608, 122)
scale = Vector2(20, 20)
shape = SubResource("RectangleShape2D_w051w")
metadata/_edit_lock_ = true

[node name="CollisionShape2D7" type="CollisionShape2D" parent="TileMapGround/GroundStaticBody2D"]
position = Vector2(760, 92)
scale = Vector2(20, 20)
shape = SubResource("RectangleShape2D_6sndk")
metadata/_edit_lock_ = true

[node name="CollisionShape2D8" type="CollisionShape2D" parent="TileMapGround/GroundStaticBody2D"]
position = Vector2(767.701, 76)
scale = Vector2(20, 20)
shape = SubResource("RectangleShape2D_vhqhe")
metadata/_edit_lock_ = true

[node name="CollisionShape2D9" type="CollisionShape2D" parent="TileMapGround/GroundStaticBody2D"]
position = Vector2(1054.53, 106)
scale = Vector2(20, 20)
shape = SubResource("RectangleShape2D_01dsb")
metadata/_edit_lock_ = true

[node name="InvisibleWallCollisionShape2D" type="CollisionShape2D" parent="TileMapGround/GroundStaticBody2D"]
position = Vector2(1244.35, -18.0546)
scale = Vector2(20, 20)
shape = SubResource("RectangleShape2D_2mgpo")
metadata/_edit_lock_ = true

[node name="InvisibleWallCollisionShape2D2" type="CollisionShape2D" parent="TileMapGround/GroundStaticBody2D"]
position = Vector2(-52.647, -17.3074)
scale = Vector2(20, 20)
shape = SubResource("RectangleShape2D_frxfb")
metadata/_edit_lock_ = true

[node name="Player" type="CharacterBody2D" parent="." node_paths=PackedStringArray("jump_component")]
position = Vector2(379, 210)
script = ExtResource("5_ct6bp")
speed = Vector2(100, 5)
gravity = 20
jump_strength = 500
IS_PLAYER = true
jump_component = NodePath("JumpComponent")
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="Player"]
offset_right = 48.0
offset_bottom = 96.0

[node name="Area2D" type="Area2D" parent="Player"]
metadata/_edit_lock_ = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Player/Area2D"]
position = Vector2(24, 48)
shape = SubResource("RectangleShape2D_h205j")
metadata/_edit_lock_ = true

[node name="JumpComponent" parent="Player" node_paths=PackedStringArray("parent_node") instance=ExtResource("6_gtpll")]
jump_parameters = SubResource("Resource_ls12s")
parent_node = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(24, 48)
shape = SubResource("RectangleShape2D_h205j")
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="Player"]
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="LabelFPS" type="Label" parent="Player/Camera2D"]
offset_top = -100.0
offset_right = 40.0
offset_bottom = -74.0
scale = Vector2(3, 3)
text = "FPS: "

[node name="SceneTransitionFade" parent="." instance=ExtResource("8_esjjy")]
scene_transition_resource = SubResource("Resource_3otu6")

[node name="CanvasLayerIntroText" type="CanvasLayer" parent="."]
layer = 2

[node name="LabelIntroText" type="Label" parent="CanvasLayerIntroText"]
offset_left = 30.0
offset_right = 606.0
offset_bottom = 312.0
scale = Vector2(2, 2)
text = "Welcome to magic game.
Your name is forgotten.
You were killed in your previous life for consuming
magical herbs and warping reality with magic.
This is Against the Rules of Human Society.
Now you have been reborn into
 a mysterious universe of unknown realities
that await for you to explore.
Have fun interacting with the local world around you with said magic. 

Skills at your disposal:
- Crafting, Fusion, Teleportation, Scavenging, Gunplay, Melee Combat,
- Dimensional Travel"
metadata/_edit_lock_ = true

[node name="StartGameButton" type="Button" parent="CanvasLayerIntroText"]
offset_left = 438.0
offset_top = 468.0
offset_right = 722.0
offset_bottom = 576.0
text = "Start Game"
metadata/_edit_lock_ = true

[connection signal="area_entered" from="Player/Area2D" to="Player" method="_on_area_2d_area_entered"]
